--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-label": "^2.1.8",
     "@tabler/icons-react": "^3.35.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.553.0",
     "mammoth": "^1.11.0",
+    "motion": "^12.23.24",
     "next": "16.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.181.1"
   },
   "devDependencies": {
