--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lucide-react": "^0.553.0",
     "mammoth": "^1.11.0",
     "motion": "^12.23.24",
-    "next": "16.0.2",
+    "next": "^16.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
