--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "main": "main.js",
-
   "scripts": {
     "dev": "next dev --webpack",
     "build": "next build --webpack",
@@ -11,11 +10,9 @@
     "lint": "eslint",
     "all": "next dev -H 0.0.0.0",
     "export": "next export",
-
     "electron": "electron .",
     "dist": "electron-builder"
   },
-
   "build": {
     "appId": "com.admin.desktop",
     "productName": "Admin",
@@ -28,7 +25,6 @@
       "target": "nsis"
     }
   },
-
   "dependencies": {
     "@capacitor/android": "^7.4.4",
     "@capacitor/cli": "^7.4.4",
@@ -44,14 +40,13 @@
     "lucide-react": "^0.553.0",
     "mammoth": "^1.11.0",
     "motion": "^12.23.24",
-    "next": "^16.1.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^14.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.66.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.1"
   },
-
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "electron": "^39.2.7",
