--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.66.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.1"
   },
