--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.66.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
